--- a/danyro.html
+++ b/danyro.html
@@ -22,7 +22,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background: #343F4F;
+            background: #141321;
         }
 
         .wrapper {
@@ -30,7 +30,7 @@
         }
 
         .wrapper .static-txt {
-            color: rgb(7, 235, 252);
+            color: #ef3f88;
             font-size: 40px;
             font-weight: 400;
         }
@@ -45,7 +45,7 @@
 
         .dynamic-txts li {
             list-style: none;
-            color: #e7f33d;
+            color: #e8ca45;
             font-size: 40px;
             font-weight: 500;
             position: relative;
@@ -71,8 +71,8 @@
             left: 0;
             height: 100%;
             width: 100%;
-            background: #343F4F;
-            border-left: 5px solid #e7f33d;
+            background: #141321;
+            border-left: 5px solid #e8ca45;
             animation: typing 3s steps(10) infinite;
         }
 
